cmake_minimum_required(VERSION 3.8)
cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME PROJ)
# project(${PROJ} LANGUAGES CXX)
# file(GLOB SRCLIST *.c)
# find_package(cjson REQUIRED)
# set(CMAKE_WIN32_EXECUTABLE ON)
# add_library(${PROJ} add.c)

# include(CTest)
if(CMAKE_SYSTEM_NAME STREQUAL Windows)
    include_directories("D:/Downloads/boost_1_85_0" "C:/Program Files (x86)/LIBANTLR4/include/antlr4-runtime")
    link_directories("C:/Program Files (x86)/LIBANTLR4/lib" "C:/Program Files (x86)/LIBANTLR4/bin")
    set(CWD "C:/Program Files (x86)/LIBANTLR4/bin")
    add_test(NAME ${PROJ} COMMAND ${PROJ} WORKING_DIRECTORY ${CWD})
elseif(CMAKE_SYSTEM_NAME STREQUAL Linux)
include_directories(/usr/local/include/antlr4-runtime)
endif()

include_directories(.antlr)
file(GLOB LEX .antlr/*.cpp)
add_executable(${PROJ} main.cpp ${LEX})
target_link_libraries(${PROJ} antlr4-runtime)
