cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME PROJ)
project(${PROJ} LANGUAGES C CXX)
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)
find_library(jansson jansson REQUIRED)
set(LEXER ${CMAKE_CURRENT_LIST_DIR}/pdf.l)
set(PARSER ${CMAKE_CURRENT_LIST_DIR}/pdf.y)
FLEX_TARGET(lexer ${LEXER} ${CMAKE_CURRENT_BINARY_DIR}/pdf.lex.c DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/pdf.lex.h COMPILE_FLAGS "-L -i")
BISON_TARGET(parser ${PARSER} ${CMAKE_CURRENT_BINARY_DIR}/pdf.tab.c COMPILE_FLAGS "-H -l")
cmake_path(GET FLEX_lexer_OUTPUT_HEADER FILENAME FLEX_lexer_OUTPUT_HEADER_NAME)
cmake_path(GET BISON_parser_OUTPUT_HEADER FILENAME BISON_parser_OUTPUT_HEADER_NAME)
set(yacc_header ${BISON_parser_OUTPUT_HEADER_NAME})
set(lex_header ${FLEX_lexer_OUTPUT_HEADER_NAME})
configure_file(${CMAKE_CURRENT_LIST_DIR}/pdf.config.h.in ${CMAKE_CURRENT_BINARY_DIR}/pdf.config.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(${PROJ} ${BISON_parser_OUTPUTS} ${FLEX_lexer_OUTPUTS})
target_link_libraries(${PROJ} jansson)
add_executable(${PROJ}_test ${CMAKE_CURRENT_LIST_DIR}/test.c)
target_link_libraries(${PROJ}_test jansson)
execute_process(COMMAND ${FLEX_EXECUTABLE} --help OUTPUT_FILE ${CMAKE_SOURCE_DIR}/flex.txt)
execute_process(COMMAND ${BISON_EXECUTABLE} --help OUTPUT_FILE ${CMAKE_SOURCE_DIR}/bison.txt)